--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.27.2",
         "bcrypt": "^5.0.0",
         "connect-session-sequelize": "^7.0.4",
         "dotenv": "^8.2.0",
@@ -18,6 +19,7 @@
         "express-handlebars": "^5.2.0",
         "express-session": "^1.17.1",
         "mysql2": "^2.2.5",
+        "node-fetch": "2.0",
         "sequelize": "^6.3.5"
     },
     "devDependencies": {
